--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.sourceforge.pebble</groupId>
     <artifactId>pebble</artifactId>
     <packaging>war</packaging>
-    <version>2.6.6-SNAPSHOT-${build.number}</version>
+    <version>2.6.6-SNAPSHOT</version>
 
 
 
